--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/socket.io": "^3.0.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "g": "^2.0.1",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2"
   }
 }
